--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
           <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
             <div class="card-body">
-              <form action="https://api-empregador.herokuapp.com:8080c/visualizar" method="post">
+              <form action="http://localhost:8080/visualizar" method="post">
                 <div class="form-row">
                   <div class="form-group col-md-6">
                     <label for="visaulizarID"> ID </label>
